Pass query from the landing controller to the result controller

--- a/grails-app/assets/javascripts/partials/landing.html
+++ b/grails-app/assets/javascripts/partials/landing.html
@@ -8,7 +8,7 @@
 			</h1>
 			<div class="ui icon huge input">
 				<input id="search" type="text" placeholder="Search..." ng-model="query">
-				<i class="inverted circular search link icon"></i>
+				<i class="inverted circular search link icon" ng-click="search()"></i>
 			</div>
 		</div>
 	</div>
