--- a/grails-app/assets/javascripts/partials/results.html
+++ b/grails-app/assets/javascripts/partials/results.html
@@ -1,6 +1,6 @@
 <div>
 	<div class="ui action input">
-		<input type="text" placeholder="Search...">
+		<input type="text" placeholder="Search..." ng-model="query">
 		<button class="ui button">Search</button>
 	</div>
 </div>
