--- a/grails-app/assets/javascripts/partials/results.html
+++ b/grails-app/assets/javascripts/partials/results.html
@@ -1,6 +1,9 @@
 <div>
-	<div class="ui action input">
+	<div class="ui huge fluid labeled action input">
+		<div class="ui label">
+			Location
+		</div>
 		<input type="text" placeholder="Search..." ng-model="query">
-		<button class="ui button">Search</button>
+		<button class="ui primary button" style="font-size: 1em;">Search</button>
 	</div>
 </div>
