Clean up results page partial

--- a/grails-app/assets/javascripts/partials/results.html
+++ b/grails-app/assets/javascripts/partials/results.html
@@ -1,9 +1,13 @@
-<div>
-	<div class="ui huge fluid labeled action input">
-		<div class="ui label">
-			Location
-		</div>
-		<input type="text" placeholder="Search..." ng-model="query">
-		<button class="ui primary button" style="font-size: 1em;">Search</button>
+<div class="ui huge fluid labeled action input">
+	<div class="ui label">
+		Location
 	</div>
+	<input type="text" placeholder="Search..." ng-model="query">
+	<button class="ui primary button" style="font-size: 1em;">Search</button>
+</div>
+<div class="ui divider" style="clear: both;"></div>
+<div class="ui three column grid">
+	<div class="column"></div>
+	<div class="column"></div>
+	<div class="column"></div>
 </div>
