Retrieve additional data on search button click

--- a/grails-app/assets/javascripts/partials/results.html
+++ b/grails-app/assets/javascripts/partials/results.html
@@ -3,7 +3,7 @@
 		Location
 	</div>
 	<input type="text" placeholder="Search..." ng-model="query">
-	<button class="ui primary button" style="font-size: 1em;">Search</button>
+	<button class="ui primary button" style="font-size: 1em;" ng-click="requery()">Search</button>
 </div>
 <div class="ui divider" style="clear: both;"></div>
 <div class="ui grid">
