Add enter key binding directive

--- a/grails-app/assets/javascripts/partials/landing.html
+++ b/grails-app/assets/javascripts/partials/landing.html
@@ -7,7 +7,7 @@
 				<div class="sub header">Enter a zipcode or address</div>
 			</h1>
 			<div class="ui icon huge input">
-				<input id="search" type="text" placeholder="Search..." ng-model="query">
+				<input id="search" type="text" placeholder="Search..." ng-model="query" enter-key="search()">
 				<i class="inverted circular search link icon" ng-click="search()"></i>
 			</div>
 		</div>
