--- a/grails-app/assets/javascripts/partials/results.html
+++ b/grails-app/assets/javascripts/partials/results.html
@@ -7,7 +7,15 @@
 </div>
 <div class="ui divider" style="clear: both;"></div>
 <div class="ui grid">
-	<div class="six wide column"></div>
+	<div class="six wide column">
+		<div class="ui segment">
+			<h3 class="ui header">Water Quality Health Violations</h3>
+			<p><b>Facilities</b> - {{facilities.length}}</p>
+			<div class="ui active inverted dimmer" ng-if="waterLoading">
+				<div class="ui loader"></div>
+			</div>
+		</div>
+	</div>
 	<div class="six wide column">
 		<div class="ui fluid card">
 			<div class="content">
