Add formatted address of search to the results page

--- a/grails-app/assets/javascripts/partials/results.html
+++ b/grails-app/assets/javascripts/partials/results.html
@@ -6,6 +6,7 @@
 	<button class="ui primary button" style="font-size: 1em;" ng-click="requery()">Search</button>
 </div>
 <div class="ui divider" style="clear: both;"></div>
+<p>Showing results for: <b>{{location}}</b></p>
 <div class="ui grid">
 	<div class="six wide column">
 		<div class="ui segment">
