--- a/grails-app/assets/javascripts/partials/results.html
+++ b/grails-app/assets/javascripts/partials/results.html
@@ -60,7 +60,11 @@
 			</div>
 		</div>
 	</div>
-	<div class="four wide column"></div>
+	<div class="four wide column">
+		<div class="ui hoverable blue link segment" ng-class="{inverted: signUpHover}" ng-mouseenter="signUpHover = true" ng-mouseleave="signUpHover = false" style="font-size: .75em;">
+			<h4 class="ui centered header">Sign up for notifications via phone or email</h4>
+		</div>
+	</div>
 </div>
 <div id="violation-modal" class="ui modal">
 	<i class="close icon"></i>
