Update landing page text

--- a/grails-app/assets/javascripts/partials/landing.html
+++ b/grails-app/assets/javascripts/partials/landing.html
@@ -2,12 +2,12 @@
 	<div class="row">
 		<div class="sixteen wide">
 			<h1 class="ui center aligned icon header">
-				<i class="circular leaf icon"></i>
-				EPA Envirofacts Search
-				<div class="sub header">Enter a zipcode or address</div>
+				<i class="green circular leaf icon"></i>
+				EPA Around Me
+				<div class="sub header">Quickly access environmental health information and alerts in your area</div>
 			</h1>
 			<div class="ui icon huge input">
-				<input id="search" type="text" placeholder="Search..." ng-model="query" enter-key="search()">
+				<input id="search" type="text" placeholder="Enter zip code or city" ng-model="query" enter-key="search()">
 				<i class="inverted circular search link icon" ng-click="search()"></i>
 			</div>
 		</div>
