--- a/grails-app/assets/javascripts/partials/results.html
+++ b/grails-app/assets/javascripts/partials/results.html
@@ -2,7 +2,7 @@
 	<div class="ui label">
 		Location
 	</div>
-	<input type="text" placeholder="Search..." ng-model="query" enter-key="requery()">
+	<input type="text" placeholder="Enter zip code or city" ng-model="query" enter-key="requery()">
 	<button class="ui primary button" style="font-size: 1em;" ng-click="requery()">Search</button>
 </div>
 <div class="ui divider" style="clear: both;"></div>
