--- a/grails-app/assets/javascripts/partials/results.html
+++ b/grails-app/assets/javascripts/partials/results.html
@@ -35,9 +35,7 @@
 					</div>
 				</a>
 			</div>
-			<div class="ui active inverted dimmer" ng-if="waterLoading">
-				<div class="ui loader"></div>
-			</div>
+			<div class="ui active inline centered loader" ng-if="waterLoading"></div>
 		</div>
 	</div>
 	<div class="six wide column">
