--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -82,8 +82,8 @@
 			</thead>
 			<tbody>
 				<tr ng-repeat="violation in violations | filter: filterCurrentViolations | orderBy: sortField : reverse">
-					<td>{{violation.facility.PWS_NAME}}</td>
-					<td>{{contaminantCodes[violation.CONTAMINANT_CODE]}}</td>
+					<td>{{violation.facilityName}}</td>
+					<td>{{violation.contaminantName}}</td>
 					<td>{{violation.COMPL_PER_BEGIN_DATE}}</td>
 					<td>{{violation.COMPL_PER_END_DATE}}</td>
 				</tr>
