--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -84,8 +84,8 @@
 				<tr ng-repeat="violation in violations | filter: filterCurrentViolations | orderBy: sortField : reverse">
 					<td>{{violation.facilityName}}</td>
 					<td>{{violation.contaminantName}}</td>
-					<td>{{violation.COMPL_PER_BEGIN_DATE}}</td>
-					<td>{{violation.COMPL_PER_END_DATE}}</td>
+					<td>{{violation.startDate.format('MM/DD/YY')}}</td>
+					<td>{{violation.endDate.format('MM/DD/YY')}}</td>
 				</tr>
 			</tbody>
 		</table>
