Throw location error if location is not in the US

--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -10,7 +10,7 @@
 	<i class="warning sign icon"></i>
 	<div class="content">
 		<div class="header">Location Error</div>
-		<p>The location you searched is too general, please search for a city or zipcode.</p>
+		<p>The location you searched is too general or outside of the United States, please search for a US city or zipcode.</p>
 	</div>
 </div>
 <p>Showing results for: <b>{{location}}</b></p>
