--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -73,14 +73,14 @@
 						<thead>
 							<tr>
 								<th>Contaminant</th>
-								<th ng-repeat="date in airData.forecastDates">{{date}}</th>
+								<th ng-repeat="date in airData.forecastDates">{{truncateDate(date)}}</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr ng-repeat="(contaminant, forecast) in airData.forecasts">
 								<td>{{contaminant}}</td>
-								<td ng-repeat="date in airData.forecastDates">
-									<a class="ui empty circular label" style="background-color: {{airQualityCodes[forecast[date]]}};" data-content="{{forecast[date]}}"></a>
+								<td class="center aligned" ng-repeat="date in airData.forecastDates">
+									<a class="ui empty circular label" style="background-color: {{airQualityCodes[forecast[date]]}};" data-content="{{forecast[date] || 'Not available'}}"></a>
 								</td>
 							</tr>
 						</tbody>
