--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -21,7 +21,7 @@
 				<div class="header">Air Quality</div>
 				<div class="description" ng-if="!airLoading && airData.location">
 					<p>{{airData.location}}</p>
-					<table class="ui table">
+					<table class="ui small table">
 						<thead>
 							<tr>
 								<th>Contaminant</th>
@@ -90,7 +90,7 @@
 				{{category.label}} - {{getViolations(category).length}} violations
 			</div>
 			<div class="content">
-				<table class="ui celled striped table">
+				<table class="ui celled small compact striped table">
 					<thead>
 						<tr>
 							<th class="hoverable" ng-repeat="header in tableHeaders" ng-click="changeSort(header.field)">
