--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -83,6 +83,7 @@
 		<i class="circular check icon"></i>
 		No Violations Found
 	</h4>
+	<div id="map" ng-if="facilities.length != 0"></div>
 	<div class="ui styled fluid accordion" ng-if="violations.length != 0">
 		<div ng-repeat="category in waterViolationCodes | filter: hasViolations">
 			<div class="title">
