Add violation table header tooltips

--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -101,6 +101,7 @@
 					<thead>
 						<tr>
 							<th class="hoverable" ng-repeat="header in tableHeaders" ng-click="changeSort(header.field)">
+								<i class="circular question icon" data-html="{{header.desc}}" ng-if="header.desc"></i>
 								{{header.label}}
 								<i ng-if="sortField == header.field" class="ui sort {{ reverse ? 'ascending' : 'descending' }} icon"></i>
 							</th>
