--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -35,7 +35,7 @@
 									<i class="circular question icon" data-html="{{airContaminantDescriptions[contaminant]}}"></i>
 								</td>
 								<td class="center aligned" ng-repeat="date in airData.forecastDates">
-									<a class="ui empty circular label" style="background-color: {{airQualityCodes[forecast[date]].color}};" data-content="{{forecast[date] || 'Not available'}}"></a>
+									<a class="ui empty circular label" style="background-color: {{airQualityCodes[forecast[date]].color}};" data-title="{{forecast[date] || 'Not available'}}" data-content="{{airQualityCodes[forecast[date]].desc}}"></a>
 								</td>
 							</tr>
 						</tbody>
