--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -13,8 +13,12 @@
 		<p>The location you searched is too general or outside of the United States, please search for a US city or zipcode.</p>
 	</div>
 </div>
+<div class="ui small basic left labeled icon button" ng-click="showHelp()" style="float: right;">
+	<i class="ui question icon"></i>
+	About
+</div>
 <p>Showing results for: <b>{{location}}</b></p>
-<div class="ui grid">
+<div class="ui grid" style="clear: both;">
 	<div class="six wide column">
 		<div class="ui fluid card">
 			<div class="content">
@@ -120,4 +124,35 @@
 		</div>
 	</div>
 	<div class="ui active inline centered loader" ng-if="waterLoading"></div>
+</div>
+<div id="about" class="ui modal">
+	<i class="close icon"></i>
+	<div class="header">
+		<i class="circular green leaf icon"></i>
+		About This Page
+	</div>
+	<div class="content">
+		<p>
+			This page gathers environmental and health information that EPA provides through many systems and web sites into one screen view.
+			The user can select a location and available information related to air and water quality will be returned.  Some of the data are
+			real-time monitoring information about environmental conditions for the selected location. Other data provides longer term
+			information about past violations that may be useful to know about. Additional data sets will be added in the future.
+		</p>
+		<h3 class="ui header">Data Sets Currently Available</h3>
+		<h4 class="ui header">AirNow</h4>
+		<p>
+			These data show air quality information for key particulates and pollutants that are indicators of overall air quality.
+			Data for today and the next 2 days are displayed using Green/Yellow/Red color coded indicators.
+		</p>
+		<h4 class="ui header">Ultraviolet (UV) Conditions</h4>
+		<p>
+			This data set provides a numeric UV quality index representing an overall measure of air quality for a location.
+		</p>
+		<h4 class="ui header">Safe Drinking Water Act Information Systems (SDWIS)</h4>
+		<p>
+			These data show a history of reporting and measuring violations and exceedances of regulated contaminants that are greater than the
+			agreed upon maximum level allowed in safe drinking water. These data provide a longer-term view of the history of violations in a
+			specific geographic area, at a particular water well, or from a regulated water system.
+		</p>
+	</div>
 </div>
