--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -14,7 +14,7 @@
 	</div>
 </div>
 <p>Showing results for: <b>{{location}}</b></p>
-<div class="ui grid">
+<div class="ui stackable grid">
 	<div class="ten wide column">
 		<div class="ui fluid card">
 			<div class="content">
