Add mobile device CSS styling

--- a/public/app/partials/landing.html
+++ b/public/app/partials/landing.html
@@ -6,7 +6,7 @@
 				EPA Around Me
 				<div class="sub header">Quickly access environmental health information and alerts in your area</div>
 			</h1>
-			<div class="ui icon fluid huge input">
+			<div id="query" class="ui icon fluid huge input">
 				<input id="search" type="text" placeholder="Enter address, city, state, and/or zipcode" ng-model="query" enter-key="search()">
 				<i class="inverted circular search link icon" ng-click="search()"></i>
 			</div>
