--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -1,4 +1,4 @@
-<div class="ui huge fluid labeled action input">
+<div id="query" class="ui huge fluid labeled action input">
 	<div class="ui label">
 		Location
 	</div>
