--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -22,3 +22,24 @@ body > .content, .menu-wrapper {
 	height: 400px;
 	margin-bottom: 1em;
 }
+
+/* Mobile Screen CSS */
+
+@media screen and (max-width: 480px) {
+	.ui.stackable.grid > .column:not(.row) {
+		padding-left: 0!important;
+		padding-right: 0!important;
+	}
+
+	#query.ui.input {
+		font-size: 1em;
+	}
+
+	.ui.table {
+		font-size: .75em!important;
+	}
+
+	#map {
+		height: 200px;
+	}
+}
