Hide fourth and fifth air quality forecasts on mobile

--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -25,7 +25,7 @@
 				<div class="header">Air Quality</div>
 				<div class="description" ng-if="!airLoading && airData.location">
 					<p>{{airData.location}}</p>
-					<table class="ui small unstackable table">
+					<table class="ui small unstackable air table">
 						<thead>
 							<tr>
 								<th>Contaminant</th>
