Show four air quality forecasts now that the table is smaller

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -39,7 +39,7 @@ body > .content, .menu-wrapper {
 		font-size: 1.15em;
 	}
 
-	.ui.air.table th:nth-child(5), .ui.air.table td:nth-child(5), .ui.air.table th:nth-child(6), .ui.air.table td:nth-child(6) {
+	.ui.air.table th:nth-child(6), .ui.air.table td:nth-child(6) {
 		display: none;
 	}
 
