--- a/public/app/partials/landing.html
+++ b/public/app/partials/landing.html
@@ -1,6 +1,10 @@
 <div class="ui middle aligned centered grid">
 	<div class="row">
 		<div class="sixteen wide">
+			<div class="ui small basic left labeled icon button" ng-click="showHelp()" style="float: right;">
+				<i class="ui question icon"></i>
+				About
+			</div>
 			<h1 class="ui center aligned icon header">
 				<i class="green circular leaf icon"></i>
 				EPA Around Me
