Add bell icon to Sign Up button

--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -77,7 +77,12 @@
 			</div>
 		</div>
 		<div class="ui hoverable blue link segment" ng-class="{inverted: signUpHover}" ng-mouseenter="signUpHover = true" ng-mouseleave="signUpHover = false" style="font-size: .75em;">
-			<h4 class="ui centered header">Sign up for notifications via phone or email</h4>
+			<h4 class="ui centered header">
+				<i class="bell icon"></i>
+				<div class="content">
+					Sign up for notifications via phone or email
+				</div>
+			</h4>
 		</div>
 	</div>
 </div>
