Only show violations map if there are affected facilities

--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -125,6 +125,6 @@
 			</div>
 		</div>
 	</div>
-	<div id="map" ng-if="facilities.length != 0"></div>
+	<div id="map" ng-if="affectedFacilities.length != 0"></div>
 	<div class="ui active inline centered loader" ng-if="waterLoading"></div>
 </div>
