--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -22,7 +22,7 @@
 	<div class="ten wide column">
 		<div class="ui fluid card">
 			<div class="content">
-				<div class="header">Air Quality</div>
+				<div class="header">Daily Air Quality Forecast</div>
 				<div class="description" ng-if="!airLoading && airData.location">
 					<p>{{airData.location}}</p>
 					<table class="ui small unstackable air table">
