Add sortable icon to violation table header columns

--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -109,6 +109,7 @@
 								<i class="circular question icon" data-html="{{header.desc}}" ng-if="header.desc"></i>
 								{{header.label}}
 								<i ng-if="sortField == header.field" class="ui sort {{ reverse ? 'ascending' : 'descending' }} icon"></i>
+								<i ng-if="sortField != header.field" class="ui sort icon"></i>
 							</th>
 						</tr>
 					</thead>
