--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -20,68 +20,62 @@
 <p>Showing results for: <b>{{location}}</b></p>
 <div class="ui stackable grid" style="clear: both;">
 	<div class="ten wide column">
-		<div class="ui fluid card">
-			<div class="content">
-				<div class="header">Daily Air Quality Forecast</div>
-				<div class="description" ng-if="!airLoading && airData.location">
-					<p>{{airData.location}}</p>
-					<table class="ui small unstackable air table">
-						<thead>
-							<tr>
-								<th>Contaminant</th>
-								<th class="center aligned" ng-repeat="date in airData.forecastDates">{{truncateDate(date)}}</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr ng-repeat="(contaminant, forecast) in airData.forecasts">
-								<td>
-									{{contaminant}}
-									<i class="circular question icon" data-html="{{airContaminantDescriptions[contaminant]}}"></i>
-								</td>
-								<td class="center aligned" ng-repeat="date in airData.forecastDates">
-									<a class="ui empty circular label" style="background-color: {{airQualityCodes[forecast[date]].color}};" data-title="{{forecast[date] || 'Not available'}}" data-content="{{airQualityCodes[forecast[date]].desc}}"></a>
-								</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="description" ng-if="!airLoading && airData.error">
-					{{airData.error}}
-				</div>
-				<div class="description" ng-if="!airLoading && !airData">
-					No data was available for your query
-				</div>
-				<div class="ui active inverted dimmer" ng-if="airLoading">
-					<div class="ui loader"></div>
-				</div>
+		<div class="ui segment">
+			<h3 class="ui floated">Daily Air Quality Forecast</h3>
+			<div class="description" ng-if="!airLoading && airData.location">
+				<p>{{airData.location}}</p>
+				<table class="ui small unstackable air table">
+					<thead>
+						<tr>
+							<th>Contaminant</th>
+							<th class="center aligned" ng-repeat="date in airData.forecastDates">{{truncateDate(date)}}</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="(contaminant, forecast) in airData.forecasts">
+							<td>
+								{{contaminant}}
+								<i class="circular question icon" data-html="{{airContaminantDescriptions[contaminant]}}"></i>
+							</td>
+							<td class="center aligned" ng-repeat="date in airData.forecastDates">
+								<a class="ui empty circular label" style="background-color: {{airQualityCodes[forecast[date]].color}};" data-title="{{forecast[date] || 'Not available'}}" data-content="{{airQualityCodes[forecast[date]].desc}}"></a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="description" ng-if="!airLoading && airData.error">
+				{{airData.error}}
+			</div>
+			<div class="description" ng-if="!airLoading && !airData">
+				No data was available for your query
+			</div>
+			<div class="ui active inverted dimmer" ng-if="airLoading">
+				<div class="ui loader"></div>
 			</div>
 		</div>
 	</div>
 	<div class="six wide column">
-		<div class="ui fluid card">
-			<div class="content">
-				<div class="header">Today's UV Index</div>
-				<div class="ui icon message {{uvData.color}}" ng-if="!uvLoading && uvData">
-					<i class="{{uvData.icon}} icon"></i>
-					<div class="content">
-						<div class="header">{{uvData.rating}} - {{uvData.header}}</div>
-						<p>{{uvData.text}}</p>
-					</div>
+		<div class="ui segment">
+			<h3 class="ui header">Today's UV Index</h3>
+			<div class="ui icon message {{uvData.color}}" ng-if="!uvLoading && uvData">
+				<i class="{{uvData.icon}} icon"></i>
+				<div class="content">
+					<div class="header">{{uvData.rating}} - {{uvData.header}}</div>
+					<p>{{uvData.text}}</p>
 				</div>
-				<div class="description" ng-if="!uvLoading && !uvData">
-					No data was available for your query
-				</div>
-				<div class="ui active inverted dimmer" ng-if="uvLoading">
-					<div class="ui loader"></div>
-				</div>
+			</div>
+			<div class="description" ng-if="!uvLoading && !uvData">
+				No data was available for your query
+			</div>
+			<div class="ui active inverted dimmer" ng-if="uvLoading">
+				<div class="ui loader"></div>
 			</div>
 		</div>
 	</div>
 </div>
 <div class="ui segment">
-	<h3 class="ui header">
-		Water Quality Health Violations
-	</h3>
+	<h3 class="ui header">Water Quality Health Violations</h3>
 	<h4 class="ui center aligned icon header" ng-if="!waterLoading && violations.length == 0">
 		<i class="circular check icon"></i>
 		No Violations Found
