--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -21,7 +21,9 @@
 <div class="ui stackable grid" style="clear: both;">
 	<div class="ten wide column">
 		<div class="ui segment">
-			<h3 class="ui floated">Daily Air Quality Forecast</h3>
+			<i class="circular question icon" style="float: right;"></i>
+			<h3 class="ui floated left header">Daily Air Quality Forecast</h3>
+			<div class="ui divider" style="clear: both;"></div>
 			<div class="description" ng-if="!airLoading && airData.location">
 				<p>{{airData.location}}</p>
 				<table class="ui small unstackable air table">
@@ -57,7 +59,9 @@
 	</div>
 	<div class="six wide column">
 		<div class="ui segment">
-			<h3 class="ui header">Today's UV Index</h3>
+			<i class="circular question icon" style="float: right;"></i>
+			<h3 class="ui floated left header">Today's UV Index</h3>
+			<div class="ui divider" style="clear: both;"></div>
 			<div class="ui icon message {{uvData.color}}" ng-if="!uvLoading && uvData">
 				<i class="{{uvData.icon}} icon"></i>
 				<div class="content">
@@ -75,7 +79,9 @@
 	</div>
 </div>
 <div class="ui segment">
-	<h3 class="ui header">Water Quality Health Violations</h3>
+	<i class="circular question icon" style="float: right;"></i>
+	<h3 class="ui floated left header">Water Quality Health Violations</h3>
+	<div class="ui divider" style="clear: both;"></div>
 	<h4 class="ui center aligned icon header" ng-if="!waterLoading && violations.length == 0">
 		<i class="circular check icon"></i>
 		No Violations Found
