--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -17,14 +17,10 @@
 		<p>The location you searched is too general or outside of the United States, please search for a US city or zipcode.</p>
 	</div>
 </div>
-<div class="ui small basic left labeled icon button" ng-click="showHelp()" style="float: right;">
-	<i class="ui question icon"></i>
-	About
-</div>
 <p>Showing results for: <b>{{location}}</b></p>
 <div class="ui stackable grid" style="clear: both;">
 	<div class="ten wide column">
-		<div class="ui segment">
+		<div class="ui blue inverted segment">
 			<i class="circular question hoverable icon" style="float: right;" data-label="air"></i>
 			<h3 class="ui floated left header">Daily Air Quality Forecast</h3>
 			<div class="ui divider" style="clear: both;"></div>
@@ -62,7 +58,7 @@
 		</div>
 	</div>
 	<div class="six wide column">
-		<div class="ui segment">
+		<div class="ui blue inverted segment">
 			<i class="circular question hoverable icon" style="float: right;" data-label="uv"></i>
 			<h3 class="ui floated left header">Today's UV Index</h3>
 			<div class="ui divider" style="clear: both;"></div>
@@ -82,7 +78,7 @@
 		</div>
 	</div>
 </div>
-<div class="ui segment">
+<div class="ui blue inverted segment">
 	<i class="circular question hoverable icon" style="float: right;" data-label="water"></i>
 	<h3 class="ui floated left header">Water Quality Health Violations</h3>
 	<div class="ui divider" style="clear: both;"></div>
@@ -93,7 +89,7 @@
 	<div class="ui styled fluid accordion" ng-if="violations.length != 0">
 		<div ng-repeat="category in waterViolationCodes | filter: hasViolations">
 			<div class="title">
-				<i class="dropdown icon"></i>
+				<i class="blue dropdown icon"></i>
 				{{category.label}} - {{getViolations(category).length}} violations from {{getViolationFacilities(category).length}} location(s)
 			</div>
 			<div class="content">
@@ -120,5 +116,5 @@
 		</div>
 	</div>
 	<div id="map" ng-if="affectedFacilities.length != 0"></div>
-	<div class="ui active inline centered loader" ng-if="waterLoading"></div>
+	<div class="ui active inverted inline centered loader" ng-if="waterLoading"></div>
 </div>
