--- a/public/app/partials/results.html
+++ b/public/app/partials/results.html
@@ -9,7 +9,7 @@
 	<input type="text" placeholder="Enter address, city, state, and/or zipcode" ng-model="query" enter-key="requery()">
 	<button class="ui primary button" style="font-size: 1em;" ng-click="requery()">Search</button>
 </div>
-<div class="ui divider" style="clear: both;"></div>
+<div class="ui divider" style="clear: both; border: 0;"></div>
 <div class="ui icon negative message" ng-if="locationError">
 	<i class="warning sign icon"></i>
 	<div class="content">
@@ -20,7 +20,7 @@
 <p>Showing results for: <b>{{location}}</b></p>
 <div class="ui stackable grid" style="clear: both;">
 	<div class="ten wide column">
-		<div class="ui blue inverted segment">
+		<div class="ui blue segment">
 			<i class="circular question hoverable icon" style="float: right;" data-label="air"></i>
 			<h3 class="ui floated left header">Daily Air Quality Forecast</h3>
 			<div class="ui divider" style="clear: both;"></div>
@@ -58,11 +58,11 @@
 		</div>
 	</div>
 	<div class="six wide column">
-		<div class="ui blue inverted segment">
+		<div class="ui blue segment">
 			<i class="circular question hoverable icon" style="float: right;" data-label="uv"></i>
 			<h3 class="ui floated left header">Today's UV Index</h3>
 			<div class="ui divider" style="clear: both;"></div>
-			<div class="ui icon message {{uvData.color}}" ng-if="!uvLoading && uvData">
+			<div class="ui uv icon message {{uvData.color}}" ng-if="!uvLoading && uvData">
 				<i class="{{uvData.icon}} icon"></i>
 				<div class="content">
 					<div class="header">{{uvData.rating}} - {{uvData.header}}</div>
@@ -78,7 +78,7 @@
 		</div>
 	</div>
 </div>
-<div class="ui blue inverted segment">
+<div class="ui blue segment">
 	<i class="circular question hoverable icon" style="float: right;" data-label="water"></i>
 	<h3 class="ui floated left header">Water Quality Health Violations</h3>
 	<div class="ui divider" style="clear: both;"></div>
@@ -116,5 +116,5 @@
 		</div>
 	</div>
 	<div id="map" ng-if="affectedFacilities.length != 0"></div>
-	<div class="ui active inverted inline centered loader" ng-if="waterLoading"></div>
+	<div class="ui active inline centered loader" ng-if="waterLoading"></div>
 </div>
